--- a/discos.html
+++ b/discos.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="rust.jpeg" class="card-img-top" alt="Disco Clássico 1">
+                        <img src="img/rust.jpeg" class="card-img-top" alt="Disco Clássico 1">
                         <div class="card-body">
                             <h5 class="card-title">Rust in Peace</h5>
                             <p class="card-text">"Rust in Peace" é o quarto álbum de estúdio da banda de thrash metal Megadeth, lançado em 1990. Considerado um dos melhores álbuns da banda e um marco no gênero, o disco é conhecido por sua complexidade técnica e letras politicamente carregadas.
