--- a/discos.html
+++ b/discos.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="coutdown.jpg" class="card-img-top" alt="Disco Clássico 2">
+                        <img src="img/coutdown.jpg" class="card-img-top" alt="Disco Clássico 2">
                         <div class="card-body">
                             <h5 class="card-title">Coutdown to Extinction</h5>
                             <p class="card-text">"Countdown to Extinction" é o quinto álbum de estúdio do Megadeth e um marco na carreira da banda. Este álbum representa uma abordagem mais acessível e polida em comparação com seus trabalhos anteriores, mantendo a intensidade do thrash metal, mas com uma produção mais refinada.</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="loudwire.webp" class="card-img-top" alt="Disco Clássico 3">
+                        <img src="img/loudwire.webp" class="card-img-top" alt="Disco Clássico 3">
                         <div class="card-body">
                             <h5 class="card-title">Peace Sells</h5>
                             <p class="card-text">"Peace Sells... But Who's Buying?" é o segundo álbum de estúdio do Megadeth e é considerado um dos trabalhos mais influentes do thrash metal. O álbum é conhecido por suas letras provocativas e críticas sociais, abordando temas como a política, a guerra e a condição humana.</p>
